Fix footer (literaly) with overflow)

--- a/app/assets/css/layout.styl
+++ b/app/assets/css/layout.styl
@@ -3,3 +3,15 @@ body
 
 #licence
 	text-align center
+
+.content
+	padding-bottom 75px
+	overflow hidden
+
+.footer
+	background white
+	position fixed
+	bottom 0
+	width 100%
+	height 75px
+
